[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "retry-on-exception"
version = "0.0.1760909670"
description = "Decorator to retry a function on exception"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "delay-timer @ git+https://git@github.com/jakeogh/delay-timer",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/retry-on-exception"

[project.scripts]
retry-on-exception-test = "retry_on_exception.retry_on_exception_test:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false
