[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "retry-on-exception"
version = "0.0.1761191930"
description = "Decorator to retry a function on exception"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/retry-on-exception"

[project.scripts]
retry-on-exception-test = "retry_on_exception.retry_on_exception_test:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.pep508-url-version-backend]
dependencies-indexed = ["delay-timer>=0.0.1761191926"]
dependencies-git = ["delay-timer @ git+https://git@github.com/jakeogh/delay-timer"]
index-urls = ["jakeogh.github.io", "pip-index"]
